--- a/action.yml
+++ b/action.yml
@@ -1,20 +1,20 @@
-name: 'Validate secrets and variables in env, repository, org for a github action'
-description: 'This action checks if the secrets and variables are present in the environment, repository, or organization'
+name: "Validate secrets and variables in env, repository, org for a github action"
+description: "This action checks if the secrets and variables are present in the environment, repository, or organization"
 inputs:
   files:
-    description: 'Array of files to process'
+    description: "Array of files to process"
     required: true
   env_name:
-    description: 'Name of the github environment, if not specified repository level will be checked'
+    description: "Name of the github environment, if not specified repository level will be checked"
     required: false
   gh_token:
-    description: 'Github token to use for the action'
+    description: "Github token to use for the action"
     required: true
 outputs:
   time: # id of output
-    description: 'The time we greeted you'
+    description: "The time we greeted you"
   missing_files:
-    description: 'The files that were not found'
+    description: "The files that were not found"
 runs:
-  using: 'node20'
-  main: 'index.js'
+  using: "node20"
+  main: "index.js"
