--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,10 @@ inputs:
   gh_token:
     description: "Github token to use for the action"
     required: true
+  check_org:
+    description: "Check if the variable is present in the organization"
+    required: false
+    default: "false"
 outputs:
   time: # id of output
     description: "The time we greeted you"
