--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,7 @@ inputs:
   check_org:
     description: "Check if the variable is present in the organization"
     required: false
+    default: "false"
 outputs:
   time: # id of output
     description: "The time we greeted you"
