--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,10 @@ inputs:
     description: "Check if the variable is present in the organization"
     required: false
     default: "false"
+  verbose:
+    description: "Print verbose logs"
+    required: false
+    default: "false"
 outputs:
   time: # id of output
     description: "The time we greeted you"
