--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,7 @@ inputs:
     default: "false"
   verbose:
     description: "Print verbose logs"
+    type: boolean
     required: false
     default: "false"
 outputs:
